# wrench-estimator

./: .gitignore  LICENSE  README.md  pyproject.toml
openspec/: config.yaml
prompts/: plot.md
scripts/: example.py  load_testing.py  plot.ipynb  static_testing.py
tests/: fit.py  plot.py  plot_group.py  test.py
wrench_estimator/: wrench_estimator.py
